{
    "name": "Console",
    "maps": [
        {
            "name": "UI",
            "id": "022b0db0-4b99-44d1-80c7-a0602aa36152",
            "actions": [
                {
                    "name": "ESC",
                    "type": "Button",
                    "id": "fe169881-fa1d-4041-9500-f2d34683114d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DiceListView",
                    "type": "Button",
                    "id": "78be2174-bb6e-46ae-b370-954750064e93",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "433edb6c-0b8a-4f52-ac91-b75ee0de69a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9cb42d95-80c8-467b-85dd-df1dba7e1959",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ESC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9458c02b-d2aa-47b0-bb0d-54fc52c3537a",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DiceListView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57c84496-143d-406c-adde-fbccfa74506a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RunTime",
            "id": "cee0079d-f501-49bb-9446-94882025a919",
            "actions": [
                {
                    "name": "DiceRoll",
                    "type": "Button",
                    "id": "4c3c0b5b-7b15-4e3d-8e73-0220e33e00d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "994e954d-0e24-478d-a41b-11168b5e7ae1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DiceRoll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}